tests/negative/traits/method_not_in_trait.orng
// method_not_in_trait.orng:10:7: error: method `f` is not in trait `My_Trait`
//     fn f() -> () { }
//      ^
// 
trait My_Trait { 
    fn g() -> ()
}

impl My_Trait for Int {
    fn f() -> () { }
}

fn main() -> Int {
    4
}